# fdf

./: CMakeLists.txt  Makefile  README.md  a.out  fdf  fdf.c  fdf.h  main_scan.c
Libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_ltoa.c  ft_ltoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_rejoin.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+29 more)
Libft/includes/: libft.h  libft.h.gch
fdf.dSYM/Contents/Resources/DWARF/: fdf
includes/: fdf.h  libft.h
learning/: a.out  main.c
maps/: 42_error_invalid_color_1.fdf  error_1.fdf  error_3.fdf  error_42_not_number.fdf  my_42.fdf
sources/: auxiliary.c  color.c  control_actions.c  control_actions_2.c  controls.c  coord_iteration.c  draw.c  free_memory.c  free_memory_2.c  inits.c  line_and_projection.c  main.c  map_checks.c  pop_color_info.c  print_menu.c  reading_map.c  rotation.c
